# tiv

./: .gitignore  CMakeLists.txt  README
src/: main.c
tests/simple-c/: CMakeLists.txt
tests/simple-c/include/: lib.h
tests/simple-c/src/: lib.c  main.c
